# crowtdiscordbot

./: .gitignore  ALIVE_COMMAND_FIX.md  AmazonQ.md  CHANGELOG.md  Cargo.toml  CrowConfig.toml.example  NEWS_URL_VALIDATION_FIX.md  NEXT_STEPS.md  PULL_REQUEST.md  README.md  case_sensitive_channels.md  configurable_context_messages.md  context  context.json  crow_changes.md  implementation_summary.md  separate_interjection_probabilities.md
.github/workflows/: cargobuild.yml
src/: bandname.rs  buzz.rs  celebrity_status.rs  config.rs  crime_fighting.rs  database.rs  db_utils.rs  display_name.rs  duckduckgo_search.rs  enhanced_frinkiac_search.rs  enhanced_masterofallscience_search.rs  enhanced_morbotron_search.rs  fact_interjection.rs  fact_interjection.rs.backup  fill_silence.rs  frinkiac.rs  gemini_api.rs  get_display_name.rs  giphy.rs  google_search.rs  image_generation.rs  lastseen.rs  main.rs  main.rs.new  main.rs.orig  main.rs.patch  main.rs.rej  main_error_handler.patch  masterofallscience.rs  media_utils.rs  morbotron.rs  mst3k_quotes.rs  multi_response_generator.rs  news_feed.rs  news_interjection.rs  news_interjection_legacy.rs  news_search.rs  news_verification.rs  prompt_templates.rs  rate_limiter.rs  (+12 more)
tests/: README.md  fix_celebrity.rs  test_cause_of_death.rs  test_celebrity.rs  test_celebrity_age.rs  test_direct.rs  test_extraction.rs  test_full_extraction.rs
