[package]
name = "crow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "mysql", "sqlite"] }
html-escape = "0.2.13"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
tokio-rusqlite = "0.4.0"
toml = "0.8.10"
lazy_static = "1.4.0"
mysql = "24.0.0"
rustc_version_runtime = "0.3.0"
sysinfo = "0.30.5"
chrono = "0.4"
scraper = "0.18.1"
select = "0.6.0"
regex = "1.11.1"
urlencoding = "2.1.3"
base64 = "0.22.0"
humantime = "2.2.0"
uuid = { version = "1.17.0", features = ["v4"] }
strsim = "0.10.0"
